Resolve contact spacing issue

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -17,7 +17,7 @@
 }
 
 #contact-section .description {
-   margin: 0.5rem 0 1.5rem 0;
+   margin: 0.5rem 0 4rem 0;
    text-align: center;
    min-width: 70%;
 }
